<resources>
    <string name="app_name">Activity with Fragment via Layout</string>
    <string name="action_settings">Settings</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="update_first_name">Update First Name</string>
    <string name="placeholder">Placeholder</string>
    <string name="label_activity_param">Parameter passed from Activity:</string>
    <string name="label_activity_runtime">Variable passed from Activity:</string>
    <string name="label_zfragment_runtime">Variable passed from ZFragment:</string>
    <string name="label_yfragment_runtime">Variable passed from YFragment:</string>
    <string name="button_update_age">Update Age</string>
</resources>
