<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/orange"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".AActivity">

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="number"/>

    <Button
        android:id="@+id/update_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update_age"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_padding"
            android:text="@string/label_yfragment_runtime"/>

        <TextView
            android:id="@+id/yfragment_runtime_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_padding"
            android:text="@string/label_zfragment_runtime"/>

        <TextView
            android:id="@+id/zfragment_runtime_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"/>
    </LinearLayout>

    <fragment
        android:name="io.exponential.activitywithfragmentvialayout.ZFragment"
        android:id="@+id/zfragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
